fix too long description on index page

--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -29,6 +29,8 @@
 .inline-card-container .card {
     justify-content: start;
     max-width: 250px;
+    max-height: 350px;
+    overflow-y: auto;
     flex-shrink: 0;
     text-decoration: none;
     color: var(--primary-color);
